<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:id="@+id/rpyp877h3k8q"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:paddingTop="90dp"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/rq2lsbwvfc5p"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginHorizontal="91dp"
            android:layout_marginBottom="490dp"
            android:background="@drawable/cr7bffffff"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingVertical="7dp">

            <TextView
                android:id="@+id/TimeTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_18_10_03"
                android:textColor="#FFFFFF"
                android:textSize="28dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/r59hxqtvt65l"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginHorizontal="70dp"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/lati"
                android:textColor="@color/white"
                android:textSize="20dp"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="@string/_12_92_56_n"
                />
            <TextView
                android:id="@+id/longti"
                android:textColor="#FFFFFF"
                android:textSize="20dp"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/_29_29_23_s"
                />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>