<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#FFFFFF"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:id="@+id/rzlwf8ncolqf"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/background"
        android:paddingTop="44dp"
        android:paddingBottom="115dp"
        android:orientation="vertical">
        <TextView
            android:id="@+id/rb3o3yk5kapn"
            android:textColor="#FFFFFF"
            android:textSize="31dp"
            android:layout_gravity="center"
            android:layout_marginBottom="70dp"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/settings"
            />
        <LinearLayout
            android:id="@+id/r9323kaqrivd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/cr12b252525"
            android:paddingVertical="23dp"
            android:paddingHorizontal="14dp"
            android:layout_marginBottom="14dp"
            android:clickable="true"
            android:focusable="true"
            android:orientation="vertical">

            <TextView
                android:id="@+id/rxjpob89xkrc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/instructions"
                android:textColor="#FFFFFF"
                android:textSize="20dp" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/rfrrsot8xd4u"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/cr12b252525"
            android:paddingVertical="22dp"
            android:paddingHorizontal="14dp"
            android:layout_marginBottom="13dp"
            android:clickable="true"
            android:focusable="true"
            android:orientation="vertical">

            <TextView
                android:id="@+id/rdqljx4ff619"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/info"
                android:textColor="#FFFFFF"
                android:textSize="20dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/hide_item"
            android:layout_width="match_parent"
            android:layout_height="68dp"
            android:layout_marginBottom="250dp"
            android:background="@color/red"
            android:clickable="true"
            android:orientation="vertical">

        </LinearLayout>

        <TextView
            android:id="@+id/ro8wv9ifgtg"
            android:textColor="#FFFFFF"
            android:textSize="14dp"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/eyespass_v1_0_0"
            />
    </LinearLayout>
</LinearLayout>