<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:id="@+id/place"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        android:paddingTop="26dp"
        android:paddingBottom="60dp"
        android:orientation="vertical">
        <RelativeLayout
            android:id="@+id/circleContainer"
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="32dp"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/circle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/todo"
                android:src="@drawable/anh4"
                android:scaleType="fitXY"
                />
        </RelativeLayout>
        <LinearLayout
            android:id="@+id/rny3hnsri6f"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:background="@drawable/cr4b252525"
            android:paddingVertical="16dp"
            android:paddingHorizontal="21dp"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/r6wt9vyi3t3"
                android:textColor="#FFFFFF"
                android:textSize="13sp"
                android:layout_marginEnd="180dp"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/angle"
                />
            <EditText
                android:id="@+id/textSpaceDegree"
                android:textColor="#FFFFFF"
                android:textSize="29sp"
                android:layout_marginEnd="31dp"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:inputType="numberDecimal"
                android:hint="0"
                android:textColorHint="@color/white"
                />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/rny3hnpsri6f"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:background="@drawable/cr4b252525"
            android:paddingVertical="16dp"
            android:paddingHorizontal="21dp"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/r6wt9vyti3t3"
                android:textColor="#FFFFFF"
                android:textSize="13sp"
                android:layout_marginEnd="4dp"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="@string/delay"
                />
            <TextView
                android:id="@+id/textTime"
                android:textColor="#FFFFFF"
                android:textSize="12sp"
                android:layout_marginEnd="31dp"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/_6_secs"
                />
            <LinearLayout
                android:id="@+id/rduq9f4rqu2c"
                android:layout_width="91dp"
                android:background="@color/red"
                android:layout_height="1dp"
                android:orientation="vertical">

            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/rny3hsri6f"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:background="@drawable/cr4b252525"
            android:paddingVertical="16dp"
            android:paddingHorizontal="21dp"
            android:layout_marginBottom="45dp"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/r6wtyti3t3"
                android:textColor="#FFFFFF"
                android:textSize="13sp"
                android:layout_marginEnd="4dp"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="@string/animation"
                />
            <TextView
                android:id="@+id/textTme"
                android:textColor="#FFFFFF"
                android:textSize="12sp"
                android:layout_marginEnd="31dp"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/_6_secs"
                />
            <LinearLayout
                android:id="@+id/rduq9fqu2c"
                android:layout_width="91dp"
                android:background="@color/red"
                android:layout_height="1dp"
                android:orientation="vertical">
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/perform_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:background="@drawable/cr4b252525"
            android:paddingVertical="17dp"
            android:layout_marginBottom="22dp"
            android:layout_marginHorizontal="105dp"
            android:clickable="true"
            android:focusable="true"
            android:orientation="vertical">

            <TextView
                android:id="@+id/rfofehol0iq"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/perform"
                android:textColor="#FFFFFF"
                android:textSize="17sp" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/cancel_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:background="@drawable/cr4b252525"
            android:paddingVertical="17dp"
            android:layout_marginHorizontal="105dp"
            android:clickable="true"
            android:focusable="true"
            android:orientation="vertical">
            <TextView
                android:id="@+id/rytvl6l7s83n"
                android:textColor="#FFFFFF"
                android:textSize="17sp"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/cancel"
                />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>